[gd_scene load_steps=2 format=3 uid="uid://ba1p7q4qievn3"]

[ext_resource type="Script" uid="uid://ce4yl22vvwywm" path="res://Scripts/difficulty.gd" id="1_s0jdy"]

[node name="Difficulty" type="Node2D"]
script = ExtResource("1_s0jdy")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, -540)

[node name="Label" type="Label" parent="."]
offset_left = 744.0
offset_top = -1009.0
offset_right = 1180.0
offset_bottom = -872.0
theme_override_font_sizes/font_size = 100
text = "Difficulty"
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Node" parent="."]

[node name="Difficulty Buttons" type="Node" parent="Buttons"]

[node name="Diff 1" type="Button" parent="Buttons/Difficulty Buttons"]
offset_left = 452.0
offset_top = -681.0
offset_right = 678.0
offset_bottom = -352.0
theme_override_font_sizes/font_size = 32
text = "Easy"
metadata/_edit_use_anchors_ = true

[node name="Diff 2" type="Button" parent="Buttons/Difficulty Buttons"]
offset_left = 836.0
offset_top = -681.0
offset_right = 1062.0
offset_bottom = -352.0
theme_override_font_sizes/font_size = 32
text = "Intermediate"
metadata/_edit_use_anchors_ = true

[node name="Diff 3" type="Button" parent="Buttons/Difficulty Buttons"]
offset_left = 1218.0
offset_top = -681.0
offset_right = 1444.0
offset_bottom = -352.0
theme_override_font_sizes/font_size = 32
text = "Hard"
metadata/_edit_use_anchors_ = true

[node name="Back Button" type="Button" parent="Buttons"]
offset_left = 144.0
offset_top = -166.0
offset_right = 267.0
offset_bottom = -89.0
theme_override_font_sizes/font_size = 50
text = "Back"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/Difficulty Buttons/Diff 1" to="." method="diff1Pressed"]
[connection signal="pressed" from="Buttons/Difficulty Buttons/Diff 2" to="." method="diff2Pressed"]
[connection signal="pressed" from="Buttons/Difficulty Buttons/Diff 3" to="." method="diff3Pressed"]
[connection signal="pressed" from="Buttons/Back Button" to="." method="backButtonPressed"]
